# istu_test_2024_2

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
.github/workflows/: cmake.yaml
cases/: NormalCase1.txt  NormalCase11.txt  NormalCase12.txt  NormalCase13.txt  NormalCase14.txt  NormalCase16.txt  NormalCase17.txt  NormalCase3.txt  NormalCase4.txt  NormalCase6.txt  NormalCase7.txt  NormalCaseRes12.txt  NormalCaseRes2.txt  NormalCaseRes5.txt  NormalCaseRes8.txt  overflow.txt
include/: functions.h
lib/: Makefile  cmake_install.cmake  lr1.cpp  lr1.h
src/: functions.cpp
test/: main_test.cpp
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  lr1_test.cpp  lr1_tests[1]_include.cmake
